updated the image

--- a/manifest_file/deployment.yml
+++ b/manifest_file/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: spring-boot-app
-        image: basu357/basurepo:1
+        image: anji432/veerarepo:latest
         ports:
         - containerPort: 8080
