--- a/manifest_file/k8s/dev/deployment.yaml
+++ b/manifest_file/k8s/dev/deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: spring-boot-app
-        image: basu357/basurepo:1
+        image: anji432/veerarepo:latest
         ports:
         - containerPort: 8080
 
