--- a/manifest_file/k8s/test/deployment.yaml
+++ b/manifest_file/k8s/test/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: spring-boot-app
-        image: basu:1
+        image: anji432/veerarepo:latest
         ports:
         - containerPort: 8080
 
